# pkg/models.go
@@ -1,0 +1,5 @@
+package pkg
+
+type ErrorResponse struct {
+	Message string `json:"message" example:"Invalid param ID"`
+}
